[gd_scene load_steps=19 format=3 uid="uid://bh0mxh6j84uyu"]

[ext_resource type="Shader" path="res://Script/pause_menu.gdshader" id="1_2yy5q"]
[ext_resource type="Theme" uid="uid://brh3ucsekdb0s" path="res://default.tres" id="1_4w7gp"]
[ext_resource type="Script" path="res://Script/Menu/pause_menu.gd" id="1_kg1ct"]
[ext_resource type="StyleBox" uid="uid://dkv1pl1c1dq6" path="res://Dialogue/VisualNovelTextbox/vn_textbox_default_panel.tres" id="3_cywrt"]
[ext_resource type="FontFile" uid="uid://eesn17jmgi52" path="res://Asset/Fonts/forgotten futurist bd.otf" id="4_sex7x"]
[ext_resource type="AudioStream" uid="uid://dumxnki43scgh" path="res://Asset/Audio/Effects/Menu_Click_Sound.mp3" id="6_7bnbr"]
[ext_resource type="AudioStream" uid="uid://er5tuxmt7cgf" path="res://Asset/Audio/Effects/Menu_Hover_Sound.mp3" id="7_mr6f7"]
[ext_resource type="PackedScene" uid="uid://qw8mhcsihprh" path="res://Interface/Settings/settings.tscn" id="8_kb6mg"]
[ext_resource type="PackedScene" uid="uid://crihnhawawd20" path="res://Interface/Settings/inventory.tscn" id="9_02hdv"]
[ext_resource type="PackedScene" uid="uid://c1gpc2r6ydv40" path="res://Interface/warning_popup.tscn" id="10_d4qfe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uskwq"]
shader = ExtResource("1_2yy5q")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eg8fx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5rgf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1amm0"]

[sub_resource type="Animation" id="Animation_ccctx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tf8ad"]
resource_name = "blur_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.143, 0.0]
}

[sub_resource type="Animation" id="Animation_npt0s"]
resource_name = "blur_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.143]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qx6fv"]
_data = {
"RESET": SubResource("Animation_ccctx"),
"blur_off": SubResource("Animation_tf8ad"),
"blur_on": SubResource("Animation_npt0s")
}

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("blur_animation", "shield", "pauseMenu", "settings", "inventory", "panel_container", "warning_popup", "menu_click", "menu_hover")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4w7gp")
script = ExtResource("1_kg1ct")
blur_animation = NodePath("blur")
shield = NodePath("SHIELD protetor de todos os males")
pauseMenu = NodePath(".")
settings = NodePath("Settings")
inventory = NodePath("Inventory")
panel_container = NodePath("PanelContainer")
warning_popup = NodePath("Warning Popup")
menu_click = NodePath("s_menu_click")
menu_hover = NodePath("s_menu_hover")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_uskwq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -163.5
offset_right = 307.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_cywrt")

[node name="Pause_Menu_Container" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="PanelContainer/Pause_Menu_Container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_sex7x")
theme_override_font_sizes/font_size = 40
text = "title_menu"
horizontal_alignment = 1

[node name="Pause_Menu_Buttons" type="VBoxContainer" parent="PanelContainer/Pause_Menu_Container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_eg8fx")
text = "button_menu_resume"
flat = true

[node name="Options" type="Button" parent="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_eg8fx")
text = "button_menu_settings"
flat = true

[node name="Items" type="Button" parent="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_l5rgf")
text = "title_inventory"
flat = true

[node name="Leave" type="Button" parent="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_eg8fx")
text = "button_menu_leave"
flat = true

[node name="s_menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7bnbr")
bus = &"Sfx"

[node name="s_menu_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_mr6f7")
volume_db = -12.0
bus = &"Sfx"

[node name="Settings" parent="." instance=ExtResource("8_kb6mg")]
visible = false
layout_mode = 1

[node name="Inventory" parent="." instance=ExtResource("9_02hdv")]
visible = false
layout_mode = 1

[node name="Warning Popup" parent="." instance=ExtResource("10_d4qfe")]
visible = false
layout_mode = 1

[node name="SHIELD protetor de todos os males" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1amm0")

[node name="blur" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qx6fv")
}

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Items" to="." method="_on_items_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Items" to="." method="_on_items_pressed"]
[connection signal="mouse_entered" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Leave" to="." method="_on_leave_mouse_entered"]
[connection signal="pressed" from="PanelContainer/Pause_Menu_Container/Pause_Menu_Buttons/Leave" to="." method="_on_leave_pressed"]
